--- a/TiendApp/app/src/main/res/layout/activity_settings.xml
+++ b/TiendApp/app/src/main/res/layout/activity_settings.xml
@@ -24,8 +24,8 @@
         android:text="@string/settings"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="30sp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
         android:textColor="#000000"
         />
 
@@ -36,7 +36,7 @@
         android:text="@string/languages"
         android:textSize="20sp"
         android:layout_marginTop="25dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="20dp"
         android:textColor="#000000"
     />
 
@@ -45,13 +45,18 @@
         android:id="@+id/btn_en"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btn_en" />
+        android:text="@string/btn_en"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="2dp" />
 
     <Button
         android:id="@+id/btn_es"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btn_es" />
+        android:text="@string/btn_es"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
 
     <!--TextView
         android:id="@+id/txt_hello"
